Fixed Shift Summaries button style & placement, no longer copies stringified version of log
#701

--- a/src/clientSelectionPage.styl
+++ b/src/clientSelectionPage.styl
@@ -11,6 +11,13 @@ sidebar-borders = darken(sidebar-bg, 10%)
 	overflow hidden
 	height 100%
 
+	> #shiftSummariesContainer
+		position absolute
+		bottom 20px
+		width 100%
+		text-align center
+		z-index 1001
+
 	> #expandMenuButton
 		background none
 		position fixed
